kwrk-dev: support Tulip 2.2.0